--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Projects</h1>
 
-<% @portfolio_projects.each do |portfolio_item| %>
-  <p><%= portfolio_item.title %></p>
-  <p><%= portfolio_item.subtitle %></p>
-  <p><%= portfolio_item.body %></p>
-  <%= image_tag portfolio_item.thumb_image %>
+<% @portfolio_projects.each do |portfolio_project| %>
+  <p><%= portfolio_project.title %></p>
+  <p><%= portfolio_project.subtitle %></p>
+  <p><%= portfolio_project.body %></p>
+  <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
 <% end %>
