add new and edit button on portfolio

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Projects</h1>
 
+<%= link_to "Add new Project", new_project_path %>
+
 <% @portfolio_projects.each do |portfolio_project| %>
   <p><%= portfolio_project.title %></p>
   <p><%= portfolio_project.subtitle %></p>
   <p><%= portfolio_project.body %></p>
   <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
+  <%= link_to "Edit", edit_project_path(portfolio_project.id) %>
 <% end %>
