add delete to complete project crud

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,4 +8,5 @@
   <p><%= portfolio_project.body %></p>
   <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
   <%= link_to "Edit", edit_project_path(portfolio_project) %>
+  <%= link_to 'Delete Project', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
