--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Add new Project", new_project_path %>
 
 <% @portfolio_projects.each do |portfolio_project| %>
-  <h3><%= link_to portfolio_project.title, project_path(portfolio_project) %></h3>
+  <h3><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></h3>
   <p><%= portfolio_project.subtitle %></p>
   <p><%= portfolio_project.body %></p>
   <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
