--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,11 +2,4 @@
 
 <%= link_to "Add new Project", new_project_path %>
 
-<% @portfolio_projects.each do |portfolio_project| %>
-  <h3><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></h3>
-  <p><%= portfolio_project.subtitle %></p>
-  <p><%= portfolio_project.body %></p>
-  <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
-  <%= link_to "Edit", edit_project_path(portfolio_project) %>
-  <%= link_to 'Delete Project', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= render partial: 'portfolio_project', collection: @portfolio_projects %>
