--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,10 +1,1 @@
-// Place all the styles related to the Projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-body {
-  background: lightgray;
-}
-
-.top a {
-  color: brown;
-}
+@import "bootstrap";
