--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Projects</h1>
 
-<%= link_to "Add new Project", new_project_path %>
+<%= link_to "Add new Project", new_project_path if logged_in?(:site_admin) %>
 
 <%= render partial: 'portfolio_project', collection: @portfolio_projects %>
