--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ body {
 }
 
 .cover-container {
-  max-width: 42em;
+  max-width: 55em;
 }
 
 /*
@@ -101,4 +101,15 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, 0.5);
+}
+
+/*
+ * Custom Styles
+ */
+.card-body {
+  color: black;
+}
+
+.auth-links a {
+  color: black;
 }
