--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,14 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <%= render "shared/application_nav"%>
 
-    <%= render "shared/nav", location: "top" %>
+      <%= yield %>
 
-    <%= login_helper %>
+      <%= render "shared/application_footer"%>
 
-    <%= yield %>
-
-    <%= set_copyright %>
-
-    <%= source_helper("application") %>
+      <%= source_helper("application") %>
+    </div>
   </body>
 </html>
