add about text and update styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,10 +106,6 @@ body {
 /*
  * Custom Styles
  */
-body {
-  text-align: center;
-}
-
 .card-body {
   text-align: left;
   color: black;
@@ -120,5 +116,9 @@ body {
 }
 
 .register-text {
+  text-align: center;
+}
+
+.mastfoot {
   text-align: center;
 }
