--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Jens Kristian Vyff</h1>
+<p>Heya, I'm Jens. I enjoy diving into problems and finding thoughtful solutions.</p>
+
+<p>Unabashedly, I love to create designs that communicate with and delight people and build systems that allow people not to have to worry about the minutia.</p>
+
+<p>My passions combine an eye for design with my growing technical ability to realize those in the world. I've been known to sling Javascript/React, Ruby, C/C++, Processing, and SQL.</p>
+
+<p>Always excited for a challenge, and currently looking for a full time role.</p>
+
+<p>Not yet crushed by overwhelming feedback, so if you have some, let me know.</p>
