--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#contact</h1>
-<p>Reach me at<%= number_to_phone "5551234567"%></p>
+<h1 class="center-text">Just reach out.</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+  <h3>Happy to help with</h3>
+  <p>Programming - Design - Photography</p>
+  
+  <h3>Working from</h3>
+  <p>Wedgewood, Seattle, WA 98115</p>
+
+  <h3>Email</h3>
+  <p><a href="mailto:jens@vyff.com?subject=PortfolioContact" "email me">Email me</a></p>
+  </div>
+  <div class="col-md-6">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10742.792131273696!2d-122.30251266563019!3d47.69028405942766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490139296838881%3A0xc07fc60562efdeb2!2sWedgwood%2C%20Seattle%2C%20WA%2098115!5e0!3m2!1sen!2sus!4v1602714149241!5m2!1sen!2sus" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+</div>
