--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,11 +5,8 @@
   <h3 class="pb-4 mb-4 font-italic border-bottom">
     Latest Blogs
   </h3>
-
+  
+  <%= paginate @blogs %>
   <%= render @blogs %>
-
-  <nav class="blog-pagination">
-    <a class="btn btn-outline-primary" href="#">Older</a>
-    <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
-  </nav>
+  <%= paginate @blogs %>
 </div>
