--- a/app/views/projects/_portfolio_project.html.erb
+++ b/app/views/projects/_portfolio_project.html.erb
@@ -1,6 +1,22 @@
-<h3><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></h3>
-<p><%= portfolio_project.subtitle %></p>
-<p><%= portfolio_project.body %></p>
-<%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
-<%= link_to "Edit", edit_project_path(portfolio_project) if logged_in?(:site_admin) %>
-<%= link_to 'Delete Project', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+<div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
+    <div class="card-body">
+      <span class="card-text"><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></span>
+      <%= portfolio_project.subtitle %>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <% if logged_in?(:site_admin) %>
+            <button type="button" class="btn btn-sm btn-outline-secondary">
+              <%= link_to "Edit", edit_project_path(portfolio_project) %>
+            </button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">
+              <%= link_to 'Delete', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </button>
+          <% end %>
+        </div>
+        <small class="text-muted">9 mins</small>
+      </div>
+    </div>
+  </div>
+</div>
