--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -16,34 +16,11 @@
   <body>
     <%= render 'shared/projects_nav'%>
 
-    <main role="main">
-      <!-- Start of masthead -->
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1>Album example</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-          </p>
-        </div>
-      </section>
-      <!-- End of masthead -->
+    <%= render 'shared/projects_masthead' %>
 
-      <%= yield %>
-    </main>
+    <%= yield %>
 
-    <!-- Start of footer -->
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="{{ site.url }}/">Visit the homepage</a> or read our <a href="{{ site.baseurl }}/docs/{{ site.docs_version }}/getting-started/introduction/">getting started guide</a>.</p>
-      </div>
-    </footer>
-    <!-- End of footer -->
+    <%= render 'shared/projects_footer' %>
 
     <%= source_helper("application") %>
   </body>
