--- a/app/views/shared/_projects_nav.html.erb
+++ b/app/views/shared/_projects_nav.html.erb
@@ -4,16 +4,18 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <p class="text-muted">I need to create. Any study I undertake is with a desire to create.</p>
+          <p class="text-muted">I'm a hands on designer with technical skills in User Experience, Marketing, and Computer Science.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">Explore</h4>
           <ul class="list-unstyled">
             <li><%= link_to "Home", root_path, class: "text-white" %></li>
             <li><%= link_to "Projects", projects_path, class: "text-white" %></li>
             <li><%= link_to "Blog", blogs_path, class: "text-white" %></li>
             <li><%= link_to "Contact", contact_path, class: "text-white" %></li>
             <li><%= link_to "About", about_path, class: "text-white" %></li>
+            <li><%= login_helper "text-white" %></li>
           </ul>
         </div>
       </div>
