--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,12 +1,19 @@
-<%= image_tag @portfolio_project.main_image %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_project.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_project.title %></h1>
 
-<h1><%= @portfolio_project.title %></h1>
+      <em><%= @portfolio_project.subtitle %></em>
 
-<em><%= @portfolio_project.subtitle %></em>
+      <p><%= @portfolio_project.body %></p>
 
-<p><%= @portfolio_project.body %></p>
-
-<h2>Technologies used:</h2>
-<% @portfolio_project.technologies.each do |t| %>
-  <p><%= t.name %></p>
-<% end %>
+      <h2>Technologies used:</h2>
+      <% @portfolio_project.technologies.each do |t| %>
+        <p><%= t.name %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
