--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit this project</h1>
-
-<%= render "form", portfolio_project: @portfolio_project %>
+<div class="container project-form">
+  <h1>Edit this project</h1>
+  <%= render "form", portfolio_project: @portfolio_project %>
+</div>
