--- a/app/views/projects/_portfolio_project.html.erb
+++ b/app/views/projects/_portfolio_project.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-4">
-  <div class="card mb-4 shadow-sm">
+<div class="col-md-4" id="<%= dom_id(portfolio_project) %>">
+  <div class="card mb-4 shadow-sm handle">
     <%= image_tag portfolio_project.thumb_image unless portfolio_project.thumb_image.nil? %>
     <div class="card-body">
       <span class="card-text"><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></span>
