--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <%= render "shared/application_nav"%>
 
+      <div id="background"></div>
       <%= yield %>
 
       <%= render "shared/application_footer"%>
