implemented carrierwave file upload

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container project-form">
+<div class="container projects-container">
   <h1>Create an new project</h1>
   <%= render "form", portfolio_project: @portfolio_project %>
 </div>
