--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container projects-container">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfolio_project.main_image %>
+      <%= image_tag @portfolio_project.main_image.url, width: '100%' %>
     </div>
     <div class="col-md-5">
       <h1><%= @portfolio_project.title %></h1>
