implemented gritter for notifications

--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -21,6 +21,8 @@
 
     <%= render 'shared/projects_footer' %>
 
+    <%= render "shared/alerts" %>
+
     <%= source_helper("application") %>
   </body>
 </html>
