--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+@import "gritter";
 
 /* stylelint-disable selector-list-comma-newline-after */
 
@@ -123,4 +124,71 @@ h6 {
 
 .social-links li {
   font-size: 2.5em;
+}
+
+.gritter-item-wrapper {
+  background-color: rgba(44, 44, 44, 0.9);
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.gritter-item-wrapper.gritter-light {
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid #ddd;
+}
+
+.gritter-item-wrapper.gritter-light .gritter-close:after {
+  color: #555;
+}
+
+.gritter-item-wrapper .gritter-top {
+  display: none;
+}
+
+.gritter-item-wrapper .gritter-bottom {
+  display: none;
+}
+
+.gritter-item-wrapper .gritter-item {
+  background: none;
+}
+
+.gritter-item-wrapper .gritter-with-image {
+  width: 195px;
+}
+
+.gritter-item-wrapper .gritter-close {
+  background: none;
+  left: auto;
+  right: 3px;
+  display: block !important;
+  font-size: 0;
+  text-indent: 0;
+}
+
+.gritter-item-wrapper .gritter-close:after {
+  font-family: "Ionicons";
+  content: "\25A3";
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 30px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 20px;
+  color: #fff;
+  opacity: 0.7;
+}
+
+.gritter-item-wrapper .gritter-close:hover {
+  outline: none;
+}
+
+.gritter-item-wrapper .gritter-close:hover:after {
+  opacity: 1;
+}
+
+.gritter-item-wrapper .gritter-close:focus {
+  outline: none;
 }
