--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,14 @@
 
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <%= render "shared/application_nav"%>
+      <%= render "shared/application_nav" %>
 
       <div id="background"></div>
       <%= yield %>
 
-      <%= render "shared/application_footer"%>
+      <%= render "shared/application_footer" %>
+
+      <%= render "shared/alerts" %>
 
       <%= source_helper("application") %>
     </div>
