--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,6 +28,8 @@
 
         <%= render 'shared/blog_footer'%>
 
+        <%= render "shared/alerts" %>
+
         <%= source_helper("blog") %>
       </div>
     </div>
