--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,9 @@
 <%= form_with(model: @portfolio_project, local: true) do |f| %>
+  <% if @portfolio_project.errors.any? %>
+    <% @portfolio_project.errors.full_messages.each do |error| %>
+      <%= js add_gritter(flash[:error], title: "Project Error", sticky: false) %>
+    <% end %>
+  <% end %>
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
