refactored alerts method with generator

--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -20,9 +20,9 @@
     <%= yield %>
 
     <%= render 'shared/projects_footer' %>
-
-    <%= render "shared/alerts" %>
-
+  
+    <%= alerts %>
+    
     <%= source_helper("application") %>
   </body>
 </html>
