--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,7 +28,7 @@
 
         <%= render 'shared/blog_footer'%>
 
-        <%= render "shared/alerts" %>
+        <%= alerts %>
 
         <%= source_helper("blog") %>
       </div>
