--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,10 @@
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
+  <h1 class="cover-heading">Heya friend</h1>
   <p class="lead">
-    Cover is a one-page template for building simple and beautiful home pages.
-    Download, edit the text, and add your own fullscreen background photo to
-    make it your own.
+    Welcome to my site! 
+  </p>
+  <p class="lead">
+    Check out some things i've worked on and feel free to reach out.
   </p>
   <p class="lead">
     <%= link_to "About me", about_path, class: "btn btn-lg btn-secondary" %>
