--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,5 +5,5 @@
 
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
 
-  <p><%= @blog.body %></p>
+  <p><%= markdown @blog.body %></p>
 </div>
