--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,4 @@
-@import "bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "font-awesome";
 @import "gritter";
 
@@ -168,7 +168,7 @@ h6 {
 
 .gritter-item-wrapper .gritter-close:after {
   font-family: "Ionicons";
-  content: "\25A3";
+  content: "\f405";
   width: 100%;
   height: 100%;
   text-align: center;
