truncate body length

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -7,5 +7,5 @@
     <%= link_to 'Edit', edit_blog_path(blog) %> /
     <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
-  <p><%= blog.body %></p>
+  <p><%= markdown truncate(@blog.body, length: 40) %></p>
 </div>
