--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,7 +148,7 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url("elliott-engelmann-DjlKxYFJlTc-unsplash.jpg") no-repeat;
+  background-color: "black";
   background-size: cover;
 }
 
