--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,17 +138,14 @@ body {
 }
 
 #background {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
   min-height: 100%;
-  width: auto;
+  min-width: 1024px;
+  width: 100%;
   height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: -100;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  background-color: "black";
   background-size: cover;
 }
 
