--- a/app/views/blogs/_hero_blog.html.erb
+++ b/app/views/blogs/_hero_blog.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
-  <div class="col-md-6 px-0">
-    <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-    <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+  <div class="col-md-8 px-0">
+    <h1 class="display-4 font-italic"><%= @blogs.first.title %></h1>
+    <p class="lead my-3"><%= markdown truncate(@blogs.first.body, length: 250) %></p>
+    <p class="lead mb-0"><a href="#" class="ont-weight-bold"><%= link_to "Continue reading...", @blogs.first, class: "text-white"  %></a></p>
   </div>
 </div>
