--- a/app/views/projects/_portfolio_project.html.erb
+++ b/app/views/projects/_portfolio_project.html.erb
@@ -1,21 +1,22 @@
 <div class="col-md-4" id="<%= dom_id(portfolio_project) %>">
-  <div class="card mb-4 shadow-sm handle">
-    <%= image_tag project_img(portfolio_project.thumb_image.url, 'thumb') %>
-    <div class="card-body">
-      <span class="card-text"><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></span>
-      <%= portfolio_project.subtitle %>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="btn-group">
-          <% if logged_in?(:site_admin) %>
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-              <%= link_to "Edit", edit_project_path(portfolio_project) %>
-            </button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-              <%= link_to 'Delete', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } %>
-            </button>
-          <% end %>
+  <div class="card-container">
+    <div class="card project-card mb-4 shadow-sm handle">
+      <%= image_tag project_img(portfolio_project.thumb_image.url, 'thumb') %>
+      <div class="card-body">
+        <p class="card-text"><%= link_to portfolio_project.title, project_show_path(portfolio_project) %></p>
+        <%= portfolio_project.subtitle %>
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <% if logged_in?(:site_admin) %>
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <%= link_to "Edit", edit_project_path(portfolio_project) %>
+              </button>
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <%= link_to 'Delete', project_path(portfolio_project), method: :delete, data: { confirm: 'Are you sure?' } %>
+              </button>
+            <% end %>
+          </div>
         </div>
-        <small class="text-muted">9 mins</small>
       </div>
     </div>
   </div>
