--- a/app/views/shared/_projects_masthead.html.erb
+++ b/app/views/shared/_projects_masthead.html.erb
@@ -1,8 +1,10 @@
 <section class="jumbotron text-center">
   <div class="container">
-    <h1>My Projects</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-    <p>
+    <h1>Explore</h1>
+    <p class="lead text-muted">
+      Here are some of my latest React, Node, and Ruby on Rails projects.
+      I'm a systems thinker with good design as my highest priority.
+    </p>
       <%= link_to "Find out more about me", about_path, class: "btn btn-primary"%>
       <%= link_to "My Blog", blogs_path, class: "btn btn-secondary"%>
     </p>
