--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
 
       <em><%= @portfolio_project.subtitle %></em>
 
-      <p><%= @portfolio_project.body %></p>
+      <p><%= markdown @portfolio_project.body %></p>
 
       <h2>Technologies used:</h2>
       <% @portfolio_project.technologies.each do |t| %>
